force-app/main/default/objects/Inspection__c/Inspection__c.object-meta.xml
<CustomObject>
    <description>A collaborative enterprise which has a planned goal. A Inspection can one or more phases</description>
    <label>ES Inspection</label>
    <nameField>
        <label>Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ES Inspections</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>