force-app/main/default/objects/Inspection__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <label>End Date Rollup</label>
    <summarizedField>ES_Phase__c.End_Date_Rollup__c</summarizedField>
    <summaryForeignKey>ES_Phase__c.Inspection__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>