force-app/main/default/objects/Inspection__c/fields/Goal_Statement__c.field-meta.xml
<CustomField>
    <fullName>Goal_Statement__c</fullName>
    <description>objective, issue being addressed, target, how will the Inspection be measured.</description>
    <inlineHelpText>objective, issue being addressed, target, how will the Inspection be measured.</inlineHelpText>
    <label>Goal Statement</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>