force-app/main/default/objects/Inspection__c/fields/Health_Comment__c.field-meta.xml
<CustomField>
    <fullName>Health_Comment__c</fullName>
    <description>Comment to explain the reasons of the Inspection Status.</description>
    <label>Health Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>