force-app/main/default/objects/Inspection__c/fields/Inspection_Initiator__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Initiator__c</fullName>
    <label>Inspection Initiator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>F&amp;S</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>