force-app/main/default/objects/Inspection__c/fields/Inspection_Owner__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Owner__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Owner</label>
    <type>Text</type>
</CustomField>