force-app/main/default/objects/Inspection__c/fields/Inspection_Size__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Size__c</fullName>
    <formula>IF(ISPICKVAL(Level_of_Effort__c,&quot;Small&quot;),1, 
IF(ISPICKVAL(Level_of_Effort__c,&quot;Medium&quot;),2, 
IF(ISPICKVAL(Level_of_Effort__c,&quot;Large&quot;),3,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>