force-app/main/default/objects/Inspection__c/fields/PMO_Contact__c.field-meta.xml
<CustomField>
    <fullName>PMO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMO Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>