force-app/main/default/objects/Inspection__c/fields/Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Category__c</fullName>
    <label>Inspection Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Non IT</fullName>
            </value>
            <value>
                <fullName>SteerCo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>