force-app/main/default/objects/Inspection__c/fields/Project_Completion_Image__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Completion_Image__c</fullName>
    <formula>IMAGE(&quot;/resource/ES_Status_Images/ES_Percent_100.jpg&quot;, &quot;Completed&quot;, 10, (Percentage_Completion__c * 100 )/1.3) &amp; 
IMAGE(&quot;/resource/ES_Status_Images/ES_Percent_0.jpg&quot;, &quot;Zero&quot;, 10, (100 - Percentage_Completion__c * 100 )/1.3) &amp; 
&apos; &apos; &amp; 
TEXT(ROUND(Percentage_Completion__c * 100,0)) &amp; 
&apos;%&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Completion</label>
    <type>Text</type>
</CustomField>