force-app/main/default/objects/Inspection__c/fields/Project_End_Month__c.field-meta.xml
<CustomField>
    <fullName>Inspection_End_Month__c</fullName>
    <formula>TEXT(YEAR(Deadline_formula__c)) + &quot;.&quot; + TEXT(MONTH(Deadline_formula__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection End Month</label>
    <type>Text</type>
</CustomField>