force-app/main/default/objects/Inspection__c/fields/Project_Health__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Health__c</fullName>
    <description>Inspection Status to be used in reporting</description>
    <inlineHelpText>On Track = Will meet deadline / At Risk = At risk for missing deadline / Late = Will miss deadline</inlineHelpText>
    <label>Inspection Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ES_Status</valueSetName>
    </valueSet>
</CustomField>