force-app/main/default/objects/Inspection__c/fields/Project_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Start_Month__c</fullName>
    <formula>TEXT(YEAR(Kickoff_formula__c )) + &quot;.&quot; + TEXT(MONTH(Kickoff_formula__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Start Month</label>
    <type>Text</type>
</CustomField>