force-app/main/default/objects/Inspection__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Status__c</fullName>
    <label>Inspection Current Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Initiate</fullName>
                <default>true</default>
                <label>Initiate</label>
            </value>
            <value>
                <fullName>Execute</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>