force-app/main/default/objects/Inspection__c/fields/Roadmap_Status__c.field-meta.xml
<CustomField>
    <fullName>Roadmap_Status__c</fullName>
    <description>Indicates whether a Inspection is approved.</description>
    <label>Roadmap Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Committed</fullName>
                <default>true</default>
                <label>Committed</label>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Incremental</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Non funded</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Runrate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>