force-app/main/default/objects/Inspection__c/fields/Start_Date_from_parent_phase__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_from_parent_phase__c</fullName>
    <label>Start Date from parent phase</label>
    <summarizedField>ES_Phase__c.Start_date_from_child_Inspection__c</summarizedField>
    <summaryForeignKey>ES_Phase__c.Inspection__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>