force-app/main/default/objects/Inspection__c/fields/Start_Date_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Rollup__c</fullName>
    <label>Start Date Rollup</label>
    <summarizedField>ES_Phase__c.Start_Date_Rollup__c</summarizedField>
    <summaryForeignKey>ES_Phase__c.Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>