force-app/main/default/objects/Inspection__c/fields/Sum_of_task_count_child_project__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_task_count_child_Inspection__c</fullName>
    <label>Sum of task count child Inspection</label>
    <summarizedField>ES_Phase__c.Sum_of_tasks_count_child__c</summarizedField>
    <summaryForeignKey>ES_Phase__c.Inspection__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>