force-app/main/default/objects/Inspection__c/fields/Sum_Wheigted_perc__c.field-meta.xml
<CustomField>
    <fullName>Sum_Wheigted_perc__c</fullName>
    <label>Sum Wheigted %</label>
    <summarizedField>ES_Phase__c.Phase_Weighted_Perc__c</summarizedField>
    <summaryForeignKey>ES_Phase__c.Inspection__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>