force-app/main/default/objects/Inspection__c/validationRules/Path_to_Green_should_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Path_to_Green_should_be_blank</fullName>
    <active>true</active>
    <description>Path to Green field should be used only for Late, At Risk or On Hold Inspections. Please use Health Comment for On Track Inspections</description>
    <errorConditionFormula>ISBLANK(Path_to_Green__c  ) &amp;&amp;( ISPICKVAL(Inspection_Health__c  , &apos;At Risk&apos;)|| ISPICKVAL(Inspection_Health__c  , &apos;On Hold&apos;) ||
 ISPICKVAL(Inspection_Health__c  , &apos;Late&apos;))</errorConditionFormula>
    <errorDisplayField>Path_to_Green__c</errorDisplayField>
    <errorMessage>Path to Green field should be used only for Late, At Risk or On Hold Inspections. Please use Health Comment for On Track Inspections</errorMessage>
</ValidationRule>