force-app/main/default/objects/Inspection__c/listViews/All_Templates.listView-meta.xml
<ListView>
    <fullName>All_Templates</fullName>
    <columns>NAME</columns>
    <columns>Inspection_Owner__c</columns>
    <columns>Percentage_Completion__c</columns>
    <columns>Health_Icon__c</columns>
    <columns>Inspection_Status__c</columns>
    <columns>Deadline_formula__c</columns>
    <columns>Kickoff_formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsTemplate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Templates</label>
</ListView>