force-app/main/default/objects/Inspection__c/listViews/My_Projects_Home.listView-meta.xml
<ListView>
    <fullName>My_Inspections_Home</fullName>
    <columns>NAME</columns>
    <columns>Inspection_Owner__c</columns>
    <columns>Health_Icon__c</columns>
    <columns>Inspection_Status__c</columns>
    <columns>Percentage_Completion__c</columns>
    <columns>Qtr_of_Completion__c</columns>
    <columns>Health_Comment__c</columns>
    <columns>Path_to_Green__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Inspection_Health__c</field>
        <operation>equals</operation>
        <value>Not Started,On Track,At Risk,Late,On Hold</value>
    </filters>
    <filters>
        <field>IsTemplate__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Inspections</label>
</ListView>